fixed the leftChat__user__details alignment

--- a/src/scss/new.scss
+++ b/src/scss/new.scss
@@ -6,7 +6,7 @@
 }
 
 .leftChat__user__details {
-  padding-right: 15px;
+  padding-right: 4px;
   width: calc(100% - 77px);
   padding-top: 12px;
   padding-bottom: 8px;
